Small edits in related work

--- a/Tex/src/related.tex
+++ b/Tex/src/related.tex
@@ -5,25 +5,25 @@ AfekKKMT2012,EllenFRB2010,BronsonCCO2010,HerlihyLLS2007,Michael:1996})
 were developed and used in concurrent software systems~\cite{Ohad:OOPSLA11}.
 Implementing efficient synchronization for such data structures is considered a challenging and error-prone task~\cite{Ohad:OOPSLA11,Doh:SPAA04,Jin:2012}.
 As a result, concurrent data structures are manually implemented by concurrency experts.
-This paper shows that (in some cases) an automatic algorithm can produce synchronization which is comparable to synchronization implemented by experts.
+This paper shows that (in some cases) an automatic algorithm can produce synchronization that is comparable to synchronization implemented by experts.
 
 \paragraph{Locking Protocols}
 Locking protocols are used in databases and shared memory systems to guarantee correctness
 of concurrently executing transactions~\cite{Weikum:2001,BHG:Book87}.
-Our approach can be seen as a way to extend many existing locking protocols by combining them with an optimistic concurrency control.
+Our approach can be seen as a way to extend many existing locking protocols by combining them with  optimistic concurrency control.
 In particular, our approach extends the following locking protocols:
-two-phase~\cite{Eswaran:1976}, tree locking~\cite{SilberschatzK1980}, DAG locking~\cite{CH:PODS95} and domination locking~\cite{Gueta2011}.
-We demonstrate this by showing that extending the  domination locking protocol enables producing efficient concurrency control for
+two-phase locking~\cite{Eswaran:1976}, tree locking~\cite{SilberschatzK1980}, DAG locking~\cite{CH:PODS95} and domination locking~\cite{Gueta2011}.
+We demonstrate the benefit of this combination by extending the  domination locking protocol to produce efficient concurrency control for
 dynamic data structures.
 
 
 \paragraph{Lock Inference Algorithms}
 There has been a lot of work on automatically inferring locks for transactions.
-Most of the algorithms in the literature infer locks for following the two-phase
+Most   algorithms in the literature infer locks that follow the two-phase
 locking protocol~\cite{MZGB:POPL06,Emmi06POPL,gudka2012lock,CCG:PLDI08,HFP:TRANSACT06,CGE:CC08}.
 Our approach can potentially be used to optimized the synchronization produced by these algorithms.
-For example, for the algorithms that employ a two-phase variant in which all locks are acquired at the beginning of transactions (e.g.,~\cite{gudka2012lock,CCG:PLDI08}),
-our approach can be used to defer the locking (e.g., to just before the first write operation) and to eliminate some of the locking operations.
+For example, for  algorithms that employ a two-phase variant in which all locks are acquired at the beginning of a transaction (e.g.,~\cite{gudka2012lock,CCG:PLDI08}),
+our approach can be used to defer the locking (e.g., to just before the first write operation) as well as to eliminate some of the locking operations.
 
 
 \paragraph{Transactional Memory}
@@ -41,13 +41,14 @@ In a sense, our approach can be seen as a specialized TM approach that can be pr
 %\paragraph{Lock Elision for Read-Only Transactions}
 \paragraph{Lock Elision}
 Our approach is inspired by the idea of \emph{sequential locks}~\cite{mckenneyParallel} and the approach presented in~\cite{Nakaike:2010}.
-But  in contrast to the approaches in \cite{mckenneyParallel,Nakaike:2010} which are designed to handle read-only transactions,
-our approach handles read-only prefixes of transactions that update the shared memory. 
-Moreover, using these approaches for a highly-contended data structure (as in Section~\ref{sec:eval}) will provide limited performance, 
-because each update transaction causes all the read-only transactions to abort.
+But  in contrast to these works,  which are designed to handle read-only transactions,
+our approach handles read-only prefixes of transactions (operations) that update the shared memory. 
+As shown in Section~\ref{sec:eval}, our approach is best suited for update-dominated workloads
+Moreover, using these approaches for a highly-contended data structure (as in Section~\ref{sec:eval}) is likely to provide limited performance, 
+because each update transaction causes many read-only transactions to abort.
 
 There are some transactional memory techniques to elide locks from arbitrary critical sections (e.g.,~\cite{Rajwar:2002:TLE:635508.605399,Roy:2009:RSS:1519065.1519094,Afek:2014:SHL:2611462.2611482}).
-In these techniques a transaction executes the critical section speculatively without acquiring the lock.
+In these techniques, a transaction executes the critical section speculatively without acquiring the lock.
 When a transaction is aborted, it can acquire the lock and execute the critical section non-speculatively.
 In contrast to our approach, these techniques cannot combine speculative and non-speculative execution of the same transaction.
 
