--- a/Tex/src/document.tex
+++ b/Tex/src/document.tex
@@ -68,8 +68,8 @@
                                   % (paid open-access papers, 
                                   % short abstracts)
 
-\titlebanner{banner above paper title}        % These are ignored unless
-\preprintfooter{short description of paper}   % 'preprint' option specified.
+\titlebanner{PPoPP submission -- please do not distribute}        % These are ignored unless
+\preprintfooter{Automatic lock removal for scalable synchronization}   % 'preprint' option specified.
 
 \title{Automatic Lock Removal for Scalable Synchronization}
 %\title{Scalable Automatic Synchronization for Concurrent Data Structures}
